app/assets/stylesheets/home.scss
/* ... */
.featured-listing{
  .featured-img{
     img{
        width: 300px;
      height: 200px;
      display: block;
      margin: 0 auto;
      object-fit: cover;
    }
  }
  .featured-icon-left{
  margin-top:10px;
    i{color:#000;
    margin-right:10px;
  font-size:20px;}
    span{
    color:#b0b0b0;
    margin: 0px !important;
    }
  .dropdown-toggle{
  border:unset;
  margin-right: 0px !important;
  padding: 0px 5px 5px;
  }  
  .btn-default:hover{
  background:none;  
  }
  .btn-default:focus{
  background:none;  
  }
  .btn-default:active{
  background:none;
  box-shadow: unset;  
  }
  ul{
  min-width:50px;
  margin: 2px 45px 0;
  li{
  padding: 2px 0px 0px 10px;
  a{
  padding:0px;
  display:unset;}
  a:hover{background-color:unset;}
      }
    }
  }

  .featured-icon-right{

i{
  color:#b0b0b0;
  font-size:20px;
  }
  span{
  color:#b0b0b0;
    }
  }  
.featureProduct{
  margin-top:0px;
  padding-top:0px;

  .descriptionBlog{
  font-size:14px;
  word-break: break-all;
  text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
    overflow: hidden;
  }

}
 

}
.myIcon{

  line-height: 14px;
  background-image: image-url('tag.png');
  background-position: center;
  background-repeat: no-repeat;
  margin-top: 0;
  vertical-align: text-bottom;
  width: 18px;
  height: 18px;
  display: inline-block;
  background-size: 100%;
}
#selectedProducts{
  img{
    width: 300px;
    height: 250px;
    display: block;
    margin: 0 auto;
    object-fit: cover;
  }
  .box-shadow-am.sm-pd-am{
  margin-bottom:20px;
   }
  }

#error_explanation{
  background: #fd8f8f none repeat scroll 0 0;
  border-radius: 0 0 4px 4px;
  color: #fff;
  left: 0;
  margin: 0 auto;
  max-width: 525px;
  overflow: hidden;
  position: absolute;
  right: 0;
  text-align: center;
  text-transform: uppercase;
  top: 0;
  z-index: 2147483647;
}

#error_explanation h2 {
  font-size: 14px;
  padding: 14px 14px 5px;

}
#error_explanation ul{
  padding-bottom: 5px;
}

form label.error {
  color: #ff0000;
}
form .text.error {
  color: #bdc5ce;
  width: 100% !important;
}
label.error {
  font-size: 10.5px;
  left: 0;
  right: 0;
  top: 48px;
  text-align: center;
  font-weight: 400;
  text-transform: capitalize;
}


/***** Account Setting ***/

.account-style{
  border-right:1px solid #eee;
  border-left:1px solid #eee;
  .box-shadow{
    padding: 15px 25px 25px;
    border: 1px solid #eee;
    border-radius: 0px;
    box-shadow: unset;

     .btn  {
       background: #323232;
       border-radius: 0px;
     }
  }

.account-heading-style{
  h3{
      margin-top: 0px;
      margin-bottom: 20px;
      }
    }
}


.account-right-setting{
      padding-left:0px;
    .account-list{
     box-shadow:unset;
      a{
      border-bottom:0px!important;
      }
    }
  }


.account-side-menu-style{
      box-shadow: unset;
  .brand{
      border-bottom:0px;
     } 
  .account-brand-icon{
  border-bottom:1px solid #4444;
    p{
      margin: 0 10px 10px;
       span{
          .fa-money{
         color:#19a95a;
          }
        }
      }
  }  
  li{
  border-bottom:0px;
  } 
  li a{
  padding: 5px 5px;}
  li:hover{
/*      border-left: 3px solid #125492;
          background: #eef7ff;*/
  }
}

.account-side-btn{
  .acc-btn-style{
    background-color:#323232;
    border-radius:0px;
        }
   }

.account-header-style{
    .header-holder{
      box-shadow:unset;
    } 
    .navbar  {
      padding:0px;
       .navbar-nav > li > a{

            }

    }
     

}
.buyer-dashboard {
  .last-seen-product{
    margin-bottom:20px;
    .box-shadow-am {
      box-shadow:none;
      border:1px solid #eee;
    }
    .product-border-style{
      margin:0;
      .product-price h5{
        color:#1cbe65;
      }
    }
  }
  .buydashboard-box{
    padding:10px 5px;
    border:1px solid #eee;
    font-weight:300;
    min-height: 175px;
  }
  .last-order{
     overflow:hidden;
    border:1px solid #eee;
    padding:10px;
    margin-bottom:15px;
    .product-img{
      border:1px solid #eee;
      padding:10px;
      img{
        width: 70%;
        text-align: center;
        margin: 0 auto;
        display: block
      }
    }
    .product-content{
      padding-top:25px;
      span.price-tag{
        background:#1cbe65;
        color:#fff;
        padding:5px;
        font-weight:300;
      }
      p{
        font-weight:300;
        padding-bottom:0;
        font-size:15px;
        margin-top:10px;
        margin-bottom:0;
      }
      span.product-quantity{
        color:#b8b8b8;
        font-weight:300;
        font-size:16px;
      }
    }
    .shipping-holder{
      padding:15px;
      position:relative;
      h4{
        padding-right:20px;
      }
      &:after{
            clear: both;
            display: block;
            content: '';
            position: absolute;
            left: 0;
            height: 159px;
            width: 1px;
            top: -10px;
            background: #eee;
      }
      .icon-next{
        position:absolute;
        right:0px;
        top:28%;
        font-size:40px;
        color:#337ab7;
      }
      span.sh-status{
          color:#b8b8b8;
          font-size:14px;
          font-weight:300;
          text-transform:uppercase
      }
      h4{
        font-weight:300;
      }
    }
  }
}



.header-custom-style{
    ul{
      li.header-serach-bar{
         margin:14px 10px;
    .header-serach-bar-input{
         width:600px;
         background-color: #000c21;
         border: none;
         color: #fff;
      }
    .header-serach-bar-input:focus{
        outline: none;
      }
    i{
        color: #fff;
      } 
    } 
  } 
    .navbar-nav>li>a:hover{
        color: #b7b7b7;
    }
   
    .custom-register-btn-style > a:hover{
        color: #ccc !Important;
    }   
}
/* ... */

